@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: SplitPath.3,v 1.3 2001/08/23 17:37:07 vincentdarley Exp $
+'\" RCS: @(#) $Id: SplitPath.3,v 1.4 2001/09/27 00:19:57 dgp Exp $
 '\" 
 .so man.macros
 .TH Tcl_SplitPath 3 7.5 Tcl "Tcl Library Procedures"
@@ -24,7 +24,7 @@ Tcl_PathType
 \fBTcl_GetPathType\fR(\fIpath\fR)
 .SH ARGUMENTS
 .AS Tcl_DString ***argvPtr
-.AP char *path in
+.AP "CONST char" *path in
 File path in a form appropriate for the current platform (see the
 \fBfilename\fR manual entry for acceptable forms for path names).
 .AP int *argcPtr out
